# quantum-trading

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  require.md
config/: backtest.yaml  default.yaml  testnet.yaml
scripts/: optimize_and_backtest.py
src/: main.py
src/backtest/: data_loader.py  engine.py  reporter.py  simulator.py
src/config/: constants.py  settings.py
src/core/: engine.py  order_manager.py  position_manager.py  risk_manager.py
src/data/: database.py  migrations.py  models.py  repository.py
src/exchange/: client.py  executor.py  market_feed.py
src/ml/: evaluator.py  feature_engineering.py  optimizer.py  trainer.py
src/quantum/: circuits.py  feature_encoding.py  signal.py  trend_detector.py
src/strategy/: base.py  dca.py  leverage.py  quantum_trend.py
tests/: conftest.py  test_cli.py  test_config.py  test_integration.py
tests/test_backtest/: test_data_loader.py  test_engine.py  test_reporter.py  test_simulator.py
tests/test_core/: test_engine.py  test_order_manager.py  test_position_manager.py  test_risk_manager.py
tests/test_data/: test_database.py  test_migrations.py  test_repository.py
tests/test_exchange/: test_client.py  test_executor.py  test_market_feed.py
tests/test_ml/: test_evaluator.py  test_feature_engineering.py  test_optimizer.py  test_trainer.py
tests/test_quantum/: test_circuits.py  test_feature_encoding.py  test_trend_detector.py
tests/test_strategy/: test_dca.py  test_leverage.py  test_quantum_trend.py
